# Copyright 2022 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_docgen/docs.gni")
import("$dir_pw_unit_test/test.gni")

config("default_config") {
  include_dirs = [ "public" ]
}

pw_source_set("pw_draw") {
  public_configs = [ ":default_config" ]
  public = [
    "public/pw_draw/draw.h",
    "public/pw_draw/font_set.h",
    "public/pw_draw/pigweed_farm.h",
    "public/pw_draw/sprite_sheet.h",
    "public/pw_draw/text_area.h",
  ]
  sources = [
    "public/pw_draw/draw.cc",
    "public/pw_draw/font6x8.cc",
    "public/pw_draw/sprite_sheet.cc",
    "public/pw_draw/text_area.cc",
  ]
  public_deps = [ "$dir_pw_framebuffer" ]
}

pw_test("draw_test") {
  deps = [
    ":pw_draw",
    "$dir_pw_log",
  ]
  sources = [ "draw_test.cc" ]
}

pw_test_group("tests") {
  tests = [ ":draw_test" ]
}
