
cc_library(
  name = "pw_i2c_rp2040",
  target_compatible_with = ["@pico-sdk//bazel/platform:rp2040"],
  srcs = [
    "initiator.cc",
  ],
  hdrs = [
    "public/pw_i2c_rp2040/initiator.h",
  ],
  includes = ["public"],
  deps = [
    "@pigweed//pw_i2c:initiator",
    "@pico-sdk//src/rp2_common/hardware_i2c:hardware_i2c",
  ],
)

